meta tweaks, image resize

--- a/dst/alcohol-landing/index.html
+++ b/dst/alcohol-landing/index.html
@@ -15,21 +15,21 @@
     </script>
 
     <title>
-        Alcohol Addiction Rehab | Flatirons Recovery
+        Alcohol Addiction Recovery | Flatirons Recovery
     </title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Alcohol Addiction and Alcohol Use Disorder. How our Flatirons Recovery alcohol treatment program works. Get help with alcohol addiction treatment today.">
+    <meta name="keywords" content="alcohol addiction, alcohol use disorder, colorado alcohol addiction">
 
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Flatirons Recovery">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Alcohol Addiction Recovery | Flatirons Recovery">
+    <meta property="og:description" content="Alcohol Addiction and Alcohol Use Disorder. How our Flatirons Recovery alcohol treatment program works. Get help with alcohol addiction treatment today.">
+    <meta property="og:image" content="/alcohol-landing/flatirons-hill.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -49,18 +49,17 @@
     <meta name="msapplication-TileColor" content="#2e86ab">
     <meta name="theme-color" content="#2e86ab">
 
-    <link rel="manifest" href="/manifest.json">
-
     <script>window.AID = 'UA-178025796-1';</script>
-    <script src="/assets/analytic.min.js"></script>
+    <script src="/assets/analytic.min.js" async></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
 
-    <link rel="stylesheet" href="/assets/flexboxgrid.min.css">
-    <link rel="stylesheet" href="/index.css">
-
+    <link rel="stylesheet" rel="preload" href="/assets/flexboxgrid.min.css">
+    <link rel="stylesheet" rel="preload" href="/index.css">
 
     <script src="/index.js" defer></script>
+
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
@@ -116,7 +115,7 @@
         
 <style>
     .main {
-        background-image: url('/admission/flatirons-hill.jpg');
+        background-image: url('/alcohol-landing/flatirons-hill.jpg');
     }
     .ps {
             font-size: 1rem;
@@ -137,7 +136,6 @@
             <h1>ALCOHOL ADDICTION RECOVERY</h1>
             <h3>get help with alcohol addiction treatment today</h3>
         </div>
-
     </div>
 </div>
 
