--- a/landing-page/alcohol-landing/index.v.html
+++ b/landing-page/alcohol-landing/index.v.html
@@ -1,12 +1,12 @@
 <!-- {
-    "title": "Alcohol Addiction Rehab | Flatirons Recovery",
-    "description": "Alcoholism, Alcohol Use Disorder and how a Flatirons Recovery alcohol treatment program works. Learn More.",
+    "title": "Alcohol Addiction Recovery | Flatirons Recovery",
+    "description": "Alcohol Addiction and Alcohol Use Disorder. How our Flatirons Recovery alcohol treatment program works. Get help with alcohol addiction treatment today.",
     "keywords": "alcohol addiction, alcohol use disorder, colorado alcohol addiction",
     "ogImage": "/admission/flatirons-hill.jpg"
 } -->
 <style>
     .main {
-        background-image: url('/admission/flatirons-hill.jpg');
+        background-image: url('/alcohol-landing/flatirons-hill.jpg');
     }
     .ps {
             font-size: 1rem;
@@ -27,7 +27,6 @@
             <h1>ALCOHOL ADDICTION RECOVERY</h1>
             <h3>get help with alcohol addiction treatment today</h3>
         </div>
-
     </div>
 </div>
 
