cover image experiments

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -9,6 +9,10 @@
     .gradient .button {
         margin: 0.2rem;
     }
+    .cover {
+        /* background-image: url("/assets/images/cover.svg"); */
+        background-image: url("/assets/images/cover.jpg");
+    }
 </style>
 
 <div class="cover">
