--- a/src/treatment/iop/index.v.html
+++ b/src/treatment/iop/index.v.html
@@ -23,10 +23,10 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
-            <p>At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy.</p>
-            <p>Group topics addressed in IOP include, but are not limited to:</p>
+            <p>At Flatirons Recovery, our IOP program meets mornings from 9am-12pm for group therapy. Depending on therapeutic need, IOP can run either 3 or 5 days per week.</p>
+            <p>Group topics addressing IOP include, but are not limited to:</p>
             <ul>
-                <li>CBT/DBT skills for relapse prevention</li>
+                <li>ACT/CBT/DBT skills for relapse prevention</li>
                 <li>Developing mindfulness skills</li>
                 <li>Relationships</li>
                 <li>Role of family in recovery</li>
