--- a/src/addiction/heroin/index.v.html
+++ b/src/addiction/heroin/index.v.html
@@ -29,7 +29,7 @@
     <ul>
         <li>Heroin is taken in larger amounts or over a longer period of time than was intended.</li>
         <li>A persistent desire or unsuccessful efforts to cut down or control heroin use.</li>
-        <li>A great deal of time is spent in activities, necessary to obtain alcohol, use heroin, or recover from its effects.</li>
+        <li>A great deal of time is spent in activities, necessary to obtain heroin, use heroin, or recover from its effects.</li>
         <li>Craving or a strong desire or urge to use heroin.</li>
         <li>Recurrent heroin use resulting in a failure to fulfill major role obligations at work, school or home.</li>
         <li>Continued heroin use despite having persistent or recurrent social or interpersonal problems caused or exacerbated by the effects of alcohol.</li>
@@ -50,6 +50,6 @@
 <div class="wrap">
     <h3>Heroin Treatment at Flatirons Recovery</h3>
     <p>Those wishing to engage in treatment for Heroin Use Disorder at Flatirons Recovery will typically engage in a medical detoxification program for a clinically determined period of 2-7 days to ensure that a client is medically stable.</p>
-    <p>Post-detox, treatment for Heroin Use Disorder at Flatirons Recovery typically begins in our PHP/Day Treatment program for a period of at least 4 weeks, the details of which can be found here.</p>
+    <p>Post-detox, treatment for Heroin Use Disorder at Flatirons Recovery typically begins in our PHP/Day Treatment program for a period of at least 4 weeks, the details of which can be <a href="/treatment/php/">found here</a>.</p>
     <p>From there, clients often step-down into our IOP for a period of 4-12 weeks, while continuing to work with their therapeutic team on a plan to address support needs that will be crucial to maintaining recovery after structured treatment ends.</p>
 </div>
