drug addiction landing page typo fixes

--- a/dst/alcohol-landing/index.html
+++ b/dst/alcohol-landing/index.html
@@ -145,7 +145,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h2>Our Alcohol Addiction Program</h2>
-                    <p>People who struggle with alcohol individuals are unique individuals and have vastly different experiences,
+                    <p>People who struggle with alcohol are unique individuals and have vastly different experiences,
                         personality
                         traits, genes, sociocultural influences, educations, races, and ethnicities. While alcoholism can often seem like a
                         hopeless and devastating disease, many people who struggle with alcohol addiction make completely full recoveries –
