--- a/src/addiction/heroin/index.v.html
+++ b/src/addiction/heroin/index.v.html
@@ -1,6 +1,6 @@
 <!-- {
     "title": "Heroin Addiction Rehab | Flatirons Recovery",
-    "description": "heroin addiction",
+    "description": "Heroin/ opiate use disorder and addiction treatment at Flatirons Recovery.",
     "keywords": "mens heroin addiction, substance abuse, colorado heroin addiction",
     "ogImage": "/admission/flatirons-hill.jpg"
 } -->
