--- a/dst/addiction/heroin/index.html
+++ b/dst/addiction/heroin/index.html
@@ -15,14 +15,14 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="heroin addiction">
+    <meta name="description" content="Heroin/ opiate use disorder and addiction treatment at Flatirons Recovery.">
     <meta name="keywords" content="mens heroin addiction, substance abuse, colorado heroin addiction">
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Heroin Addiction Rehab | Flatirons Recovery">
-	<meta property="og:description" content="heroin addiction">
+	<meta property="og:description" content="Heroin/ opiate use disorder and addiction treatment at Flatirons Recovery.">
 	<meta property="og:image" content="/admission/flatirons-hill.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
