--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,7 +1,7 @@
 <!-- {
-    "title": "Flatirons Recovery | Colorado Substance Abuse Treatment",
+    "title": "Flatirons Recovery | Colorado Addiction Treatment Center",
     "description": "Flatirons Recovery is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!",
-    "keywords": "addiction treatment, substance use, mental health disorder",
+    "keywords": "addiction treatment, substance abuse, addiction rehab",
     "ogImage": "/assets/images/cover.jpg"
 } -->
 
