new blog post, typos

--- a/src/treatment/modalities/index.v.html
+++ b/src/treatment/modalities/index.v.html
@@ -1,6 +1,6 @@
 <!-- {
     "title": "Therapeutic Modalities | Flatirons Recovery",
-    "description": "Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy are just some of the theraputic modalities utilized by Flatirons Recovery. Learn more.",
+    "description": "Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy, Experiential Therapy, Eye Movement Desensitization and Reprocessing (EMDR), Motivational Interviewing, Biofeedback are some of the therapeutic modalities utilized by Flatirons Recovery. Learn more.",
     "keywords": "addiction treatment, therapy",
     "ogImage": "/treatment/blue-brook.jpg"
 } -->
