--- a/dst/treatment/modalities/index.html
+++ b/dst/treatment/modalities/index.html
@@ -15,14 +15,14 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy are just some of the theraputic modalities utilized by Flatirons Recovery. Learn more.">
+    <meta name="description" content="Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy, Experiential Therapy, Eye Movement Desensitization and Reprocessing (EMDR), Motivational Interviewing, Biofeedback are some of the therapeutic modalities utilized by Flatirons Recovery. Learn more.">
     <meta name="keywords" content="addiction treatment, therapy">
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Therapeutic Modalities | Flatirons Recovery">
-	<meta property="og:description" content="Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy are just some of the theraputic modalities utilized by Flatirons Recovery. Learn more.">
+	<meta property="og:description" content="Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy, Experiential Therapy, Eye Movement Desensitization and Reprocessing (EMDR), Motivational Interviewing, Biofeedback are some of the therapeutic modalities utilized by Flatirons Recovery. Learn more.">
 	<meta property="og:image" content="/treatment/blue-brook.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
