--- a/landing-page/alcohol-landing/index.v.html
+++ b/landing-page/alcohol-landing/index.v.html
@@ -144,15 +144,15 @@
                 </div>
             </div>
             <div class="gallery row">
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0607.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt=""></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0607.jpg" alt="Image of our Sober living house interior 1"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt="Image of our Sober living house interior 2"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt="Image of our Sober living house interior 3"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.jpg" alt="Image of our Sober living house interior 4"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt="Image of our Sober living house interior 5"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt="Image of our Sober living house interior 6"></div>
             </div>
             <div class="row">
-                <a class="button border" href="/sober-living">Learn More</a>
+                <a class="button border" href="/sober-living">Sober Living</a>
                 <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
             </div>
         </div>
