--- a/dst/alcohol-landing/index.html
+++ b/dst/alcohol-landing/index.html
@@ -21,15 +21,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Alcohol Addiction and Alcohol Use Disorder. How our Flatirons Recovery alcohol treatment program works. Get help with alcohol addiction treatment today.">
+    <meta name="keywords" content="alcohol addiction, alcohol use disorder, colorado alcohol addiction">
 
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Flatirons Recovery">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Alcohol Addiction Recovery | Flatirons Recovery">
+    <meta property="og:description" content="Alcohol Addiction and Alcohol Use Disorder. How our Flatirons Recovery alcohol treatment program works. Get help with alcohol addiction treatment today.">
+    <meta property="og:image" content="/admission/flatirons-hill.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -78,13 +78,13 @@
 
         <div class="row middle-xs">
             <div class="col-xs-6 start-xs">
-                <a href="/">
+                <a href="/" aria-label="Home">
                     <object class="logo-holo" data="/assets/logo-holo.svg" type="image/svg+xml">flatirons recovery logo
                         holo</object>
                 </a>
             </div>
             <div class="col-xs-6 end-xs">
-                <a class="phone" href="tel:303-578-4536" data-track="click: phone, click">
+                <a class="phone" href="tel:303-578-4536" data-track="click: phone, click" aria-label="Call">
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
                         <mask id="mask">
                             <rect width="100%" height="100%" fill="white" />
@@ -269,15 +269,15 @@
                 </div>
             </div>
             <div class="gallery row">
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0607.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt=""></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0607.jpg" alt="Image of our Sober living house interior 1"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt="Image of our Sober living house interior 2"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt="Image of our Sober living house interior 3"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.jpg" alt="Image of our Sober living house interior 4"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt="Image of our Sober living house interior 5"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt="Image of our Sober living house interior 6"></div>
             </div>
             <div class="row">
-                <a class="button border" href="/sober-living">Learn More</a>
+                <a class="button border" href="/sober-living">Sober Living</a>
                 <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
             </div>
         </div>
@@ -313,17 +313,17 @@
                 <h3>Follow</h3>
                 <br>
                 <a class="badge" href="https://www.facebook.com/Flatirons-Recovery-628637104427552/" target="_blank"
-                    rel="noopener">
+                    rel="noopener" aria-label="Facebook">
                     <object data="/assets/f.svg" type="image/svg+xml">Facebook Logo</object>
                 </a>
-                <a class="badge" href="https://twitter.com/flatironscenter" target="_blank" rel="noopener">
+                <a class="badge" href="https://twitter.com/flatironscenter" target="_blank" rel="noopener" aria-label="Twitter">
                     <object data="/assets/t.svg" type="image/svg+xml">Twitter Logo</object>
                 </a>
-                <a class="badge" href="https://www.instagram.com/flatironsrecovery/" target="_blank" rel="noopener">
+                <a class="badge" href="https://www.instagram.com/flatironsrecovery/" target="_blank" rel="noopener" aria-label="Instagram">
                     <object data="/assets/i.svg" type="image/svg+xml">Instagram Logo</object>
                 </a>
                 <a class="badge" href="https://www.linkedin.com/company/flatirons-recovery" target="_blank"
-                    rel="noopener">
+                    rel="noopener" aria-label="Linkedin">
                     <object data="/assets/l.svg" type="image/svg+xml">Linkedin Logo</object>
                 </a>
             </div>
