--- a/landing-page/layout.l.html
+++ b/landing-page/layout.l.html
@@ -21,15 +21,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="<!-- { " variable": "description" } -->">
-    <meta name="keywords" content="<!-- { " variable": "keywords" } -->">
+    <meta name="description" content="<!-- { "variable": "description" } -->">
+    <meta name="keywords" content="<!-- { "variable": "keywords" } -->">
 
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Flatirons Recovery">
-    <meta property="og:title" content="<!-- { " variable": "title" } -->">
-    <meta property="og:description" content="<!-- { " variable": "description" } -->">
-    <meta property="og:image" content="<!-- { " variable": "ogImage" } -->" />
+    <meta property="og:title" content="<!-- { "variable": "title" } -->">
+    <meta property="og:description" content="<!-- { "variable": "description" } -->">
+    <meta property="og:image" content="<!-- { "variable": "ogImage" } -->" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -78,13 +78,13 @@
 
         <div class="row middle-xs">
             <div class="col-xs-6 start-xs">
-                <a href="/">
+                <a href="/" aria-label="Home">
                     <object class="logo-holo" data="/assets/logo-holo.svg" type="image/svg+xml">flatirons recovery logo
                         holo</object>
                 </a>
             </div>
             <div class="col-xs-6 end-xs">
-                <a class="phone" href="tel:303-578-4536" data-track="click: phone, click">
+                <a class="phone" href="tel:303-578-4536" data-track="click: phone, click" aria-label="Call">
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
                         <mask id="mask">
                             <rect width="100%" height="100%" fill="white" />
@@ -123,17 +123,17 @@
                 <h3>Follow</h3>
                 <br>
                 <a class="badge" href="https://www.facebook.com/Flatirons-Recovery-628637104427552/" target="_blank"
-                    rel="noopener">
+                    rel="noopener" aria-label="Facebook">
                     <object data="/assets/f.svg" type="image/svg+xml">Facebook Logo</object>
                 </a>
-                <a class="badge" href="https://twitter.com/flatironscenter" target="_blank" rel="noopener">
+                <a class="badge" href="https://twitter.com/flatironscenter" target="_blank" rel="noopener" aria-label="Twitter">
                     <object data="/assets/t.svg" type="image/svg+xml">Twitter Logo</object>
                 </a>
-                <a class="badge" href="https://www.instagram.com/flatironsrecovery/" target="_blank" rel="noopener">
+                <a class="badge" href="https://www.instagram.com/flatironsrecovery/" target="_blank" rel="noopener" aria-label="Instagram">
                     <object data="/assets/i.svg" type="image/svg+xml">Instagram Logo</object>
                 </a>
                 <a class="badge" href="https://www.linkedin.com/company/flatirons-recovery" target="_blank"
-                    rel="noopener">
+                    rel="noopener" aria-label="Linkedin">
                     <object data="/assets/l.svg" type="image/svg+xml">Linkedin Logo</object>
                 </a>
             </div>
