--- a/src/facility/index.v.html
+++ b/src/facility/index.v.html
@@ -26,6 +26,9 @@
 		max-width: 1400px;
 		flex-direction: row;
 	}
+    iframe {
+        width: 100%;
+    }
 </style>
 
 <div class="main">
@@ -39,7 +42,10 @@
 
 <div class="wrap">
     <div class="row">
-        <div class="col-xs-12 col-sm-9">
+        <div class="col-xs-12 col-sm-4">
+            <iframe id="player" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" height="300" src="https://www.youtube.com/embed/-gf96cw_JOc?controls=0"></iframe>
+        </div>
+        <div class="col-xs-12 col-sm-8">
             <h2>Our Location</h2>
             <p>Located just minutes from Boulder and the majestic Flatirons, Flatirons Recovery provides a welcoming and comfortable office space for all of our clients to begin their process of healing from drug and alcohol addiction.</p>
         </div>
