--- a/src/sober-living/index.v.html
+++ b/src/sober-living/index.v.html
@@ -25,6 +25,9 @@
 		max-width: 1400px;
 		flex-direction: row;
 	}
+    iframe {
+        width: 100%;
+    }
 </style>
 <div class="main">
     <div class="gradient">
@@ -83,6 +86,11 @@
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt=""></div>
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt=""></div>
         <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0634.jpg" alt=""></div>
+    </div>
+    <div class="row center-xs">
+        <div class="col-xs-12 col-sm-6">
+            <iframe id="player" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" height="300" src="https://www.youtube.com/embed/rZzm5VpgCvk?controls=0"></iframe>
+        </div>
     </div>
 </div>
 
