--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -24,9 +24,12 @@
     <div class="col-xs-12 col-sm-4 col-md-3">
         <h3>Contact Information:</h3>
         <hr>
-        <p><strong>Phone:</strong><br /> <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></p>
-        <p><strong>Email:</strong><br /> <a href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a></p>
-        <p><strong>Address:</strong><br /> <a href="https://goo.gl/maps/qw276Tekaxk3NL3e6" target="_blank">2770 Dagny Way Suite 202 Lafayette, CO 80026</a></p>
+        <p><strong>Phone:</strong><br /> <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a>
+        </p>
+        <p><strong>Email:</strong><br /> <a
+                href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a></p>
+        <p><strong>Address:</strong><br /> <a href="https://goo.gl/maps/qw276Tekaxk3NL3e6" target="_blank">2770 Dagny
+                Way Suite 202 Lafayette, CO 80026</a></p>
         <p>Whether you're ready to begin your recovery, or you just want to learn more, please reach out today!</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-9">
@@ -69,9 +72,12 @@
                 <textarea name="message" required></textarea>
             </div>
             <div class="col-xs-12">
-                <button class="button blue" type="submit">Submit</button>
+                <input class="button blue" type="submit" value="Submit">
             </div>
         </form>
-        <p><em>All information submitted to us is completely confidential. See our <a href="/confidentiality">HIPPA Confidentiality Policy</a>.</em></p>
+        <p>
+            <em>All information submitted to us is completely confidential. See our <a href="/confidentiality">HIPPA
+                    Confidentiality Policy</a>.</em>
+        </p>
     </div>
 </div>
