updated new host

--- a/dst/admission/index.html
+++ b/dst/admission/index.html
@@ -163,12 +163,18 @@
         <div class="col-xs">
             <h2>Admission Process</h2>
             <ul>
-                <li>Client and/or client’s family makes initial contact with Flatirons Recovery admissions staff to gather information both on our program, as well as to inform our admission’s team regarding treatment needs—in particular, whether or not the client may need detoxification services before admission.</li>
+                <li>Client and/or client’s family makes initial contact with Flatirons Recovery admissions staff to
+                    gather information both on our program, as well as to inform our admission’s team regarding
+                    treatment needs—in particular, whether or not the client may need detoxification services before
+                    admission.</li>
                 <li>Flatirons Recovery performs verification of insurance benefits.</li>
-                <li>Flatirons Recovery calls financially responsible party to discuss insurance coverage and cost of treatment.</li>
+                <li>Flatirons Recovery calls financially responsible party to discuss insurance coverage and cost of
+                    treatment.</li>
                 <li>An over the phone pre-admission assessment is performed with the prospective client.</li>
-                <li>The results of the pre-admission assessment are reviewed by Flatirons Recovery Clinical Director to determine appropriateness of client for the program.</li>
-                <li>If it is determined that the client is appropriate for treatment at Flatirons Recovery, a service agreement will be signed by the client and his or her financial representative.</li>
+                <li>The results of the pre-admission assessment are reviewed by Flatirons Recovery Clinical Director to
+                    determine appropriateness of client for the program.</li>
+                <li>If it is determined that the client is appropriate for treatment at Flatirons Recovery, a service
+                    agreement will be signed by the client and his or her financial representative.</li>
                 <li>An admission date and time is scheduled at least 24 hours in advance.</li>
             </ul>
 
@@ -348,12 +354,14 @@
         </field>
 
         <div class="col-xs-12">
-            <button class="button blue" type="submit">Submit</button>
+            <input class="button blue" type="submit" value="Submit">
         </div>
     </form>
-    <p><em>All information submitted to us is completely confidential. See our <a href="/confidentiality">HIPPA Confidentiality Policy</a>.</em></p>
+    <p>
+        <em>All information submitted to us is completely confidential. See our <a href="/confidentiality">HIPPA
+                Confidentiality Policy</a>.</em>
+    </p>
 </div>
-
     </main>
 
     <div class="yellow">
