code clean up and optimizations

--- a/landing/layout.l.html
+++ b/landing/layout.l.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
-    <script>
+    <!-- <script>
         (function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
                 'gtm.start':
@@ -12,7 +11,7 @@
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-PKK97PW');
-    </script>
+    </script> -->
 
     <title>
         <!-- { "variable": "title" } -->
@@ -49,8 +48,8 @@
     <meta name="msapplication-TileColor" content="#2e86ab">
     <meta name="theme-color" content="#2e86ab">
 
-    <script>window.AID = 'UA-178025796-1';</script>
-    <script src="/assets/analytic.min.js" async></script>
+    <!-- <script>window.AID = 'UA-178025796-1';</script> -->
+    <!-- <script src="/assets/analytic.min.js" async></script> -->
 
     <script src="/assets/nav-bar.min.js" defer></script>
 
@@ -61,12 +60,10 @@
 
     <link rel="manifest" href="/manifest.json">
 </head>
-
 <body>
 
     <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKK97PW" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PKK97PW" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
 
     <header>
@@ -79,8 +76,7 @@
         <div class="row middle-xs">
             <div class="col-xs-6 start-xs">
                 <a href="/" aria-label="Home">
-                    <object class="logo-holo" data="/assets/logo-holo.svg" type="image/svg+xml">flatirons recovery logo
-                        holo</object>
+                    <object class="logo-holo" data="/assets/logo-holo.svg" type="image/svg+xml" alt="flatirons recovery logo holo">flatirons recovery logo holo</object>
                 </a>
             </div>
             <div class="col-xs-6 end-xs">
@@ -176,8 +172,7 @@
 
     <a class="call" href="tel:303-578-4536" data-track="click: phone, click">Call</a>
 
-    <script src="https://cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script>
+    <!-- <script src="https://cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script> -->
 
 </body>
-
 </html>
