--- a/src/events/index.v.html
+++ b/src/events/index.v.html
@@ -9,38 +9,116 @@
     .main {
         background-image: url('/about/wooden-fence.jpg');
     }
-    .rti {
-        max-width: 300px;
-        min-width: 100px;
+    .circle {
+        position: relative;
+        height: 1000px;
+        width: 1000px;
     }
+    .circle > div {
+        position: absolute;
+        background-color: red;
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+    }
+
 </style>
 
 <div class="main">
     <div class="gradient">
         <div>
-            <h1>ABOUT</h1>
-            <h3>learn more about our addiction treatment center</h3>
+            <h1>EVENTS</h1>
+            <h3>current events going on at Flatirons Recovery</h3>
         </div>
     </div>
 </div>
 
 <div class="wrap">
-    <h2>Our Mission</h2>
-    <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives. </p>
-    <p>What differentiates Flatirons Recovery from other treatment providers is our mindfulness-influenced curriculum, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and mental health disorders.</p>
-    <p>Flatirons Recovery provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober living residence for clients to live in a supportive, structured, healthy environment while taking part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their time with Flatirons Recovery, clients can expect to be introduced to new many new skills to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention Skills, and introduction to community based recovery programs such as SMART Recovery and 12 Step/AA.</p>
+    <h2>Event Info</h2>
+    <p>...</p>
 </div>
 
-<div class="wrap">
-    <div class="row">
-        <div class="col-xs-12 col-md-4">
-            <img class="rti" src="/about/rti-logo.png" alt="Residential Transitions Inc">
-        </div>
-        <div class="col-xs-12 col-md-8">
-            <h3>Residential Transitions, Inc.</h3>
-            <p>Flatirons Recovery is a sister company of <a href="https://www.rti-mn.com/" target="_blank">Residential Transitions, Inc. (RTI)</a>. Founded in May 2013, RTI is committed to providing support services for people with disabilities to help them achieve the highest level of independence. RTI’s method is to teach, model and support skill building services which promote goal-oriented outcomes. RTI believes that if we are doing our job, the need for our services will be lessened as each individual, with the assistance of our practitioners, becomes more and more independent.</p>
+
+<div class="row" id="struggling-with-addiction">
+    <div class="col-xs-12 col-sm">
+        <div class="wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>Family and Friends of Those Struggling with Addiction</h2>
+                    <h3>Wednesdays at 5:30pm MST</h3>
+                    <hr>
+                </div>
+
+                <div class="col-xs-12">
+                    <h3>Topics Include:</h3>
+                    <ul>
+                        <li>How to support your loved one</li>
+                        <li>Taking care of yourself</li>
+                        <li>Understanding addiction</li>
+                        <li>Navigating the treatment world</li>
+                        <li>Creating healthy boundaries and addressing codependency</li>
+                        <li>Working through feelings of powerlessness</li>
+                    </ul>
+
+                    <p>Free, virtual and open to the community! Please Contact us to Register.</p>
+                    <a class="button blue" href="/contact">Contact Us</a>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-3">
+                    <img src="./events/mark_oberg.jpg" alt="picture of mark oberg">
+                </div>
+                <div class="col-sm-12 col-md-9">
+                    <h3>Facilitated By:</h3>
+                    <h4>Mark Oberg LPC, LAC</h4>
+                    <p>Executive Director/Clinical Director</p>
+                   
+                </div>
+            </div>
         </div>
     </div>
+    <div class="col-xs-12 col-sm half-bg first-xs last-sm" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
+</div>
+
+<div class="row" id="mediation-for-recovery">
+    <div class="col-xs-12 col-sm">
+        <div class="wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>Meditation For Recovery</h2>
+                    <h3>Tuesday's at 6:30pm MST</h3>
+                    <hr>
+                </div>
+
+                <div class="col-xs-12">
+                    <p>Meditation for recovery is a free, weekly drop- in class open to our community. Whether you are brand new to mediation,
+                    curious about how the practice may apply to life in recovery, or a seasoned mediator looking to take a weekly
+                    mindfulness break with other like- minded individuals, this class is for you! No prior mediation experience necessary.</p>
+
+                    <p>We will open each group with a brief introduction to the practice and discussion of a weekly aspect of mediation and its
+                    application to life in recovery. This will be followed by a 30 min meditation intermittent guidance.</p>
+
+                    <p>Join us every Tuesday evening! No registration required.</p>
+                    <a class="button blue"
+                        href="http://r20.rs6.net/tn.jsp?f=001uGcOOh1bnDMegxF8Ssad9Qp76cL39Jt9CI8wsFHHWVK0TgnxQNqm5IxEe-XcPkatGwIXc68CRJYrH04fHz0t_p_Gbqli0hAlNvt3tgbFJqJIe_BgWlnARk5URTB1I89fPX-XJWyB0FBgfBvg8Q6Mg4Exc3GrlQVALqAEhGJSrZVSeF-JR-Snh3kiVd-k1AcpNN06WPR70JBabrUU9XH_bA==&c=PV70SZARdwMsGZ-IkYj3aJf02jqM-d1vnUMBh06OdmVRWDDUMAGD2w==&ch=bTF7rK5GIdq2zGKUmHYh249A2earj_Ut673m3pyraT_okgzkeAVxOw=="
+                        target="_blank">Join Us</a>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-3">
+                    <img src="./events/rachael-uris.jpg" alt="picture of rachael uris">
+                </div>
+                <div class="col-sm-12 col-md-9">
+                    <h3>Facilitated By:</h3>
+                    <h4>Rachael Uris, MA</h4>
+                    <p>Director of Business Development</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
 </div>
 
 <div class="muted">
