--- a/src/events/index.v.html
+++ b/src/events/index.v.html
@@ -1,13 +1,13 @@
 <!-- {
-    "title": "About Our Addiction Treatment Center | Flatirons Recovery",
-    "description": "Our addiction treatment program provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30, 60, and 90-day tracks. Learn more about us!",
+    "title": "Events | Flatirons Recovery",
+    "description": "Events put on by Flatirons Recovery.",
     "keywords": "addiction treatment, substance use, mental health disorder",
-    "ogImage": "/about/wooden-fence.jpg"
+    "ogImage": "/assets/images/cover.jpg"
 } -->
 
 <style>
     .main {
-        background-image: url('/about/wooden-fence.jpg');
+        background-image: url('/assets/images/cover.jpg');
     }
     .circle {
         position: relative;
@@ -28,16 +28,15 @@
     <div class="gradient">
         <div>
             <h1>EVENTS</h1>
-            <h3>current events going on at Flatirons Recovery</h3>
+            <h3>events going on at Flatirons Recovery</h3>
         </div>
     </div>
 </div>
 
-<div class="wrap">
+<!-- <div class="wrap">
     <h2>Event Info</h2>
     <p>...</p>
-</div>
-
+</div> -->
 
 <div class="row" id="struggling-with-addiction">
     <div class="col-xs-12 col-sm">
@@ -78,7 +77,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm half-bg first-xs last-sm" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
+    <div class="col-xs-12 col-sm half-bg first-xs last-sm" style="background-image: url('/events/hike.jpg'); background-position: left center;"></div>
 </div>
 
 <div class="row" id="mediation-for-recovery">
@@ -118,7 +117,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
+    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/events/buddah.jpg'); background-position: center;"></div>
 </div>
 
 <div class="muted">
