fixes, menu update #39

--- a/src/events/index.v.html
+++ b/src/events/index.v.html
@@ -33,10 +33,11 @@
     </div>
 </div>
 
-<!-- <div class="wrap">
-    <h2>Event Info</h2>
-    <p>...</p>
-</div> -->
+<div class="wrap">
+    <h2>Addiction Recovery Events</h2>
+    <p>Being an active part of the recovery community in Boulder and the surrounding area is something we at Flatirons Recovery care about deeply, which is why we make it a priority to offer events that are open not just to our clients, but to anyone who may benefit in the Boulder area and beyond. Our events include educational classes and workshops, alumni gatherings, professional development opportunities and more!  Many of our events are virtual and therefore accessible to those outside of Colorado.</p>
+    <p>Please check this page for more information about our upcoming events as well as links to sign up! You can also sign up for our newsletter to make sure you never miss out on the happenings at Flatirons Recovery. </p>
+</div>
 
 <div class="row" id="struggling-with-addiction">
     <div class="col-xs-12 col-sm">
@@ -60,7 +61,7 @@
                     </ul>
 
                     <p>Free, virtual and open to the community! Please Contact us to Register.</p>
-                    <a class="button blue" href="/contact">Contact Us</a>
+                    <a class="button blue" href="https://www.eventbrite.com/e/flatirons-recovery-family-and-friends-of-those-struggling-with-addition-tickets-144261866125" target="_blank">Register</a>
                     <hr>
                 </div>
             </div>
