links, more from blog section #43

--- a/src/addiction/alcohol/index.v.html
+++ b/src/addiction/alcohol/index.v.html
@@ -52,4 +52,45 @@
     <p>Those wishing to engage in treatment for alcoholism, or Alcohol Use Disorder, at Flatirons Recovery will typically engage in a medical detoxification program for a clinically determined period of 2-7 days to ensure that a client is medically stable.</p>
     <p>Post-detox, treatment for Alcohol Use Disorder at Flatirons Recovery typically begins in our PHP/Day Treatment program for a period of at least 4 weeks, the details of which can be found here.</p>
     <p>From there, clients often step-down into our IOP for a period of 4-12 weeks, while continuing to work with their therapeutic team on a plan to address support needs that will be crucial to maintaining recovery after structured treatment ends.</p>
+
+</div>
+
+<div class="wrap">
+    <hr>
+    <h3>More From the Blog</h3>
+    
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <img src="/blog/images/highfunctioningalcoholism-rename.jpg" alt="">
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-8">
+            <h4>Recognizing the Signs of High-Functioning Alcoholism</h4>
+            <p>Some may believe that to truly be an alcoholic, these consequences must be so severe that the person’s
+            life is completely falling apart.</p>
+            <a class="button blue" href="/blog/recognizing-the-signs-of-high-functioning-alcoholism">Read More</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <img src="/blog/images/eatingdisorder-thumb.jpg" alt="">
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-8">
+            <h4>The Link Between Eating Disorders and Drug or Alcohol Addiction</h4>
+            <p>Contrary to popular belief, eating disorders do not only affect the Western world, and they don’t only
+            affect females either; they are equal opportunity conditions.</p>
+            <a class="button blue" href="/blog/eating-disorders-and-drug-or-alcohol-addiction">Read More</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <img src="/blog/images/alcohol-addiction-thumb.jpg" alt="">
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-8">
+            <h4>What are the Effects of Alcohol Addiction?</h4>
+            <p>Alcohol affects the brain on a number of levels, learn about the effects of alcoholism and the signs of alcohol addiction.</p>
+            <a class="button blue" href="/blog/what-are-the-effects-of-alcohol-addiction">Read More</a>
+        </div>
+    </div>
 </div>
