--- a/src/addiction/cocaine/index.v.html
+++ b/src/addiction/cocaine/index.v.html
@@ -52,3 +52,19 @@
     <p>Post-detox, treatment for Cocaine Use Disorder at Flatirons Recovery typically begins in our PHP/Day Treatment program for a period of at least 4 weeks, the details of which can be found here.</p>
     <p>From there, clients often step-down into our IOP for a period of 4-12 weeks, while continuing to work with their therapeutic team on a plan to address support needs that will be crucial to maintaining recovery after structured treatment ends.</p>
 </div>
+
+<div class="wrap">
+    <hr>
+    <h3>More From the Blog</h3>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <img src="/blog/images/cocaineandanxiety-thumb.jpg" alt="">
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-8">
+            <h4>Cocaine and Anxiety: Can cocaine cause an anxiety disorder?</h4>
+            <p>Unfortunately, cocaine use is most likely going to make a person’s anxiety worse in the long run, and may even bring about clinical anxiety for someone who has not previously struggled with anxiety in the past.</p>
+            <a class="button blue" href="/blog/can-cocaine-cause-anxiety-disorder">Read More</a>
+        </div>
+    </div>
+</div>
