--- a/src/treatment/therapy/index.v.html
+++ b/src/treatment/therapy/index.v.html
@@ -38,7 +38,7 @@
                         <li>Self-esteem, identity, and confidence</li>
                         <li>Direct communication</li>
                         <li>Relationships</li>
-                        <li>Developing healthy boundaries</li>
+                        <li>Developing <a href="/blog/why-are-healthy-boundaries-so-important-in-addiction-recovery">healthy boundaries</a></li>
                     </div>
                 </div>
             </ul>
@@ -52,7 +52,7 @@
     
         <div class="col-xs-12">
             <h3>Group Therapy</h3>
-            <p>At Flatirons Recovery, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
+            <p>At Flatirons Recovery, clients will engage in 30-hours of group programming during <a href="/treatment/php">PHP/Day Treatment</a> programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
             <p>Topics that may be addressed during group therapy sessions at Flatirons Recovery include:</p>
             <ul>
                 <div class="row">
@@ -63,7 +63,7 @@
                         <li>Community-based recovery (AA/SMART Recovery)</li>
                     </div>
                     <div class="col-xs-12 col-sm">
-                        <li>Mindfulness</li>
+                        <li><a href="/mindfulness">Mindfulness</a></li>
                         <li>Nutrition for early recovery (Pro-Recovery Diet)</li>
                         <li>Having fun in recovery</li>
                         <li>Grief and loss</li>
