heading clean up #38

--- a/src/about/index.v.html
+++ b/src/about/index.v.html
@@ -19,7 +19,7 @@
     <div class="gradient">
         <div>
             <h1>about</h1>
-            <h2>learn more about our addiction treatment center</h2>
+            <h2>Learn More About Our Addiction Treatment Center</h2>
         </div>
     </div>
 </div>
