--- a/src/index.v.html
+++ b/src/index.v.html
@@ -9,7 +9,9 @@
     .gradient .button {
         margin: 0.2rem;
     }
-
+    .gradient h1 {
+        text-transform: none;
+    }
     .cover {
         /* background-image: url("/assets/images/cover.svg"); */
         background-image: url("/assets/images/cover.jpg");
