--- a/src/team/index.v.html
+++ b/src/team/index.v.html
@@ -18,7 +18,7 @@
     <div class="gradient">
         <div>
             <h1>TEAM</h1>
-            <h3>meet our team of compassionate professionals</h3>
+            <h2>Meet Our Team Of Compassionate Professionals</h2>
         </div>
     </div>
 </div>
