--- a/src/sober-living/index.v.html
+++ b/src/sober-living/index.v.html
@@ -33,7 +33,7 @@
     <div class="gradient">
         <div>
             <h1>SOBER LIVING</h1>
-            <h3>our colorado sober living facilities</h3>
+            <h2>our colorado sober living facilities</h2>
         </div>
     </div>
 </div>
@@ -49,18 +49,18 @@
         <h3>What’s included in Flatirons Recovery’s structured sober living?</h3>
         <ul>
             <div class="row">
-                <div class="col-xs-12 col-sm">
+                <ul class="col-xs-12 col-sm">
                     <li>Peer and Staff support and accountability</li>
                     <li>Assistance with developing connection to community-based recovery programs (12-Step/SMART)</li>
                     <li>Daily house meetings</li>
                     <li>Food provided by Flatirons Recovery</li>
-                </div>
-                <div class="col-xs-12 col-sm">
+                </ul>
+                <ul class="col-xs-12 col-sm">
                     <li>Transportation both to and from Flatirons Recovery’s counseling center</li>
                     <li>Wi-Fi Internet Access</li>
                     <li>Staff facilitated outdoor activities</li>
                     <li>Gym/Pool Membership</li>
-                </div>
+                </ul>
 
             </div>
         </ul>
